String::split(UChar, Vector<String>&) shouldn't create a temporary String https://bugs.webkit.org/show_bug.cgi?id=100578

Reviewed by Anders Carlsson.

Changed split(UChar, Vector<String>&) to call split(UChar, bool, Vector<String>&) instead of creating a
string and calling the split(String,...) version and moved it to WTFString.h.  Also moved
split(const String& separator, Vector<String>& result) to WTFString.h.

* wtf/text/WTFString.cpp:
(WTF::String::split):
* wtf/text/WTFString.h:
(WTF::String::split):


Canonical link: https://commits.webkit.org/118720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132828 268f45cc-cd09-0410-ab3c-d52691b4dbfc